syntax = "proto3";

package fluence.proxy.grpc;

message WebsocketMessage {
    string service = 1;
    string method = 2;
    bytes payload = 3;

}